# corpus-replicator

./: .gitignore  .pre-commit-config.yaml  .taskcluster.yml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
src/corpus_replicator/: __main__.py  common.py  core.py  generate_corpus.py  generate_template.py  test_common.py  test_generate_corpus.py  test_generate_template.py  test_replicator.py
src/corpus_replicator/recipes/: animation_apng_png_ffmpeg.yml  animation_gif_gif_ffmpeg.yml  animation_webp_webp_libwebp.yml  audio_aac_mp4_ffmpeg.yml  audio_flac_flac_libflac.yml  audio_mp3_mp3_libmp3lame.yml  audio_mp3_mp3_shine.yml  audio_opus_opus_libopus.yml  audio_pcm_wav_ffmpeg.yml  audio_vorbis_ogg_libvorbis.yml  image_avif_avif_imagemagick.yml  image_bmp_bmp_ffmpeg.yml  image_gif_gif_ffmpeg.yml  image_heic_heic_imagemagick.yml  image_ico_ico_ffmpeg.yml  image_jpg_jpg_ffmpeg.yml  image_png_png_ffmpeg.yml  image_webp_webp_libwebp.yml  schema.json  video_av1_webm_libaom.yml  video_h264_264_libx264.yml  video_h264_mp4_libx264.yml  video_h265_mp4_libx265.yml  video_theora_ogg_libtheora.yml  video_vp8_webm_libvpx.yml  video_vp9_webm_libvpx.yml  video_xvid_mp4_libxvid.yml
src/corpus_replicator/tools/: ffmpeg.py  imagemagick.py  test_ffmpeg.py  test_imagemagick.py
