[build-system]
requires = ["setuptools >= 43", "wheel", "setuptools_scm[toml] >= 3.4"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
omit = [
    "*/setup.py",
    "*/__main__.py",
    "*/test_*",
    "*/build/*",
    "*/dist/*",
    "*/.tox/*",
    "*/.egg/*",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
]

[tool.isort]
known_first_party = "corpus-replicator"
profile = "black"

[tool.mypy]
ignore_missing_imports = true
strict = true
show_error_codes = true
warn_unused_ignores = false

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "duplicate-code",
    "fixme",
    "missing-module-docstring",
    "too-few-public-methods",
    "too-many-arguments",
]

[tool.pylint.typecheck]
ignored-modules = ["pytest"]

[tool.pytest.ini_options]
log_level = "DEBUG"

[tool.ruff.lint]
select = [
    # flake8-comprehensions
    "C4",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # Flynt
    "FLY",
    # Perflint
    "PERF",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # Ruff-specific rules
    "RUF",
    # pycodestyle
    "W",
]
ignore = ["SIM117"]

[tool.setuptools_scm]
