[metadata]
author = Tyson Smith
author_email = twsmith@mozilla.com
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing
description =
keywords = automation corpus fuzz fuzzing security test testing
license = MPL 2.0
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Mozilla Fuzzing Team
maintainer_email = fuzzing@mozilla.com
name = corpus-replicator
url = https://github.com/MozillaSecurity/corpus-replicator

[options]
include_package_data = True
install_requires =
    PyYAML
package_dir =
    = src
packages =
    corpus_replicator
python_requires = >=3.8
zip_safe = False

[options.entry_points]
console_scripts =
    corpus-replicator = corpus_replicator.core:main

[options.extras_require]
dev =
    pre-commit
    tox

[codespell]
ignore-words-list =
    alls
